<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center_vertical">


    <RelativeLayout
        android:id="@+id/iv_report"
        android:layout_width="wrap_content"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_11">

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_gcid"/>

                <TextView
                    android:id="@+id/tv_report_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"/>


            </TableRow>

            <TableRow android:layout_marginTop="@dimen/margin_small">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_mealname"/>

                <TextView
                    android:id="@+id/tv_report_mealname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"/>


            </TableRow>

            <TableRow android:layout_marginTop="@dimen/margin_small">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_mobile"/>

                <TextView
                    android:id="@+id/tv_report_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"/>


            </TableRow>

            <TableRow android:layout_marginTop="@dimen/margin_small">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_address"/>

                <TextView
                    android:id="@+id/tv_report_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"/>


            </TableRow>

            <TableRow android:layout_marginTop="@dimen/margin_small">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_time"/>

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"/>


            </TableRow>

            <TableRow android:layout_marginTop="@dimen/margin_small">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_gcstatus"/>

                <TextView
                    android:id="@+id/tv_report_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"/>


            </TableRow>

        </TableLayout>


</LinearLayout>
