<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <LinearLayout
        android:layout_width="272dp"
        android:layout_height="119dp"
        android:background="@drawable/dialog_nodev"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_dev"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/margin_18"
        android:layout_gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_23"
        android:layout_marginLeft="@dimen/margin_23"
        android:layout_marginBottom="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_23">

        <Button
            android:id="@+id/btn_sure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/red"
            android:textSize="@dimen/text_size_16"
            android:background="@drawable/dialog_btn_sure"
            android:text="@string/family_addmember"/>

        <Button
            android:id="@+id/btn_cancle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin_20"
            android:textSize="@dimen/text_size_16"
            android:background="@drawable/dialog_btn_cancle"
            android:textColor="@color/white"
            android:text="@string/text_change_cancle"/>

    </LinearLayout>
    </LinearLayout>
</LinearLayout>
