<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_height"
        >
        <ImageView
            android:id="@+id/iv_leftback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_15"
            android:src="@mipmap/ic_register_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/text_size_20"
            android:textColor="@color/black_register"
            android:text="@string/register"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_25"
        android:layout_marginLeft="@dimen/margin_25"
        android:layout_marginTop="@dimen/margin_58"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/padding_10"
            android:paddingRight="@dimen/padding_10"
            android:paddingBottom="@dimen/padding_10">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_register_head"
                android:layout_gravity="center_vertical"
                />
            <EditText
                android:id="@+id/et_register_account"
                style="@style/edit_common_style"
                android:textSize="@dimen/text_18_size"
                android:layout_centerVertical="true"
                android:hint="@string/register_input_user"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_divide"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_15"
            android:paddingTop="@dimen/padding_10"
            android:paddingRight="@dimen/padding_10"
            android:paddingBottom="@dimen/padding_10">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_register_name"
                android:layout_gravity="center_vertical"
                />
            <EditText
                android:id="@+id/et_register_name"
                style="@style/edit_common_style"
                android:textSize="@dimen/text_18_size"
                android:layout_centerVertical="true"
                android:hint="@string/register_input_name"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_divide"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_25"
            android:paddingBottom="@dimen/padding_10">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_register_phone"
                android:layout_gravity="center_vertical"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_big"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/et_register_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:textSize="@dimen/text_18_size"
                    android:layout_centerVertical="true"
                    android:hint="@string/register_input_phone"/>
                <!--<TextView
                    android:id="@+id/tv_send_vcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/bg_toolbar_title"
                    android:text="@string/register_vcode"
                    android:textSize="@dimen/text_18_size"
                    android:padding="@dimen/margin_little"/>-->

            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_divide"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_25"
            android:paddingBottom="@dimen/padding_10">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_register_message"
                android:layout_gravity="center_vertical"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_big"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/et_register_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:textSize="@dimen/text_18_size"
                    android:layout_centerVertical="true"
                    android:hint="@string/input_vcode"/>
                <TextView
                    android:id="@+id/tv_send_vcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/register_vcode"
                    android:textSize="@dimen/text_size_15"
                    android:gravity="center"
                    android:background="@mipmap/ic_message_click_vcode"
                    android:padding="@dimen/margin_little"/>

            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_divide"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_25"
            android:layout_marginBottom="@dimen/padding_10">
            <ImageView
                android:id="@+id/iv_psd_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_register_psw"
                />
            <EditText
                android:id="@+id/et_register_psw"
                style="@style/edit_common_style"
                android:layout_toRightOf="@+id/iv_psd_head"
                android:layout_toLeftOf="@+id/ic_psd"
                android:layout_centerVertical="true"
                android:inputType="textPassword"
                android:textSize="@dimen/text_18_size"
                android:hint="@string/register_sure_psd"/>
            <ImageView
                android:id="@+id/ic_psd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_little"
                android:src="@mipmap/ic_close_psd"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_divide"/>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_register_over"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_25"
        android:padding="12dp"
        android:textSize="@dimen/text_18_size"
        android:background="@drawable/register_sharp_btn"
        android:textColor="@color/white"
        android:text="@string/register_over" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_25"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_login_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_10"
            android:text="@string/login_prompt"/>
        <TextView
            android:id="@+id/tv_usage_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="@string/user_usage_protocol"/>
    </LinearLayout>

    </LinearLayout>

</RelativeLayout>
